--- a/_includes/home.html
+++ b/_includes/home.html
@@ -1,4 +1,4 @@
-<div style="background:#ddd; margin:5px -200px; padding: 5px 200px;">Description of project</div>
+<div style="background:#eee; margin:5px -200px; padding: 5px 200px;">Description of project</div>
 
 
 
