--- a/_includes/home.html
+++ b/_includes/home.html
@@ -1,4 +1,4 @@
-<div style="background:#eee; margin:5px -50px; padding: 5px 50px;">Description of project</div>
+<div style="background:#eee; margin:1em -2em; padding: 1em 2em;">Description of project</div>
 
 
 
