--- a/style.scss
+++ b/style.scss
@@ -151,7 +151,7 @@ img {
 //
 
 .wrapper-masthead {
-  margin-bottom: 50px;
+  margin-bottom: 10px;
 }
 
 .masthead {
@@ -285,6 +285,8 @@ footer {
 
 .infobox {
   background: #eee;
+  margin: 0 -3em;
+  padding: 2em 3em
 }
 
 .sectionheader {
