--- a/style.scss
+++ b/style.scss
@@ -241,9 +241,14 @@ nav {
 // .main
 //
 
+
 .posts > .post {
   padding-bottom: 2em;
   border-bottom: 1px solid $lightGray;
+}
+
+.posts > .post > h3 {
+    margin: 1em 0 0;
 }
 
 .post {
